@@ -1,3 +1,4 @@
+Suport DHCP option (52) overload.
 Added -T test option. This just sends a DHCP_DISCOVER message and then
 prints the configuration data to stdout - we don't request a lease,
 configure the interface or write the info file.
